--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Hi! 🙆 Im Kelly Bacus!"
+title: "Hi! 🙆 I am Aron John Dizon!"
 description: "Welcome to my Github portfolio!"
 show_downloads: true
 theme: jekyll-theme-Chirpy
