--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ title: "Hi! 🙆 I am Aron John Dizon!"
 description: "Welcome to my Github portfolio!"
 show_downloads: true
 theme: jekyll-theme-Minimal
+logo : /Images/Aj.jpg
